Wire up event response and member group queries. Add event response endpoints

--- a/ODK.Web.Api/ODK.Web.Api.csproj
+++ b/ODK.Web.Api/ODK.Web.Api.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\ODK.Services\ODK.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Admin\Events\" />
+  </ItemGroup>
+
 </Project>
