Tighten up member permissions, get emails from database, add account creation and activation

--- a/ODK.Services.Mails/ODK.Services.Mails.csproj
+++ b/ODK.Services.Mails/ODK.Services.Mails.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ODK.Core\ODK.Core.csproj" />
     <ProjectReference Include="..\ODK.Services\ODK.Services.csproj" />
   </ItemGroup>
 
