--- a/ODK.Web.Api/appsettings.json
+++ b/ODK.Web.Api/appsettings.json
@@ -6,12 +6,18 @@
     "Auth": {
       "AccessTokenLifetimeMinutes": 20,
       "Key": "this is a local token that is replaced in production",
+      "PasswordResetTokenLifetimeMinutes": 30,
       "RefreshTokenLifetimeDays": 1
     },
     "Cors": {
       "AllowedOrigins": "http://localhost:4200",
       "AllowedMethods": "GET,POST,PUT,PATCH,DELETE,OPTIONS",
       "AllowedHeaders": "*"
+    },
+    "Urls": {
+      "ActivateAccount": "/account/activate?token={token}",
+      "PasswordReset": "/account/passwordreset?token={token}",
+      "WebBase": "http://localhost:4200"
     }
   },
   "Logging": {
@@ -23,8 +29,8 @@
   },
   "AllowedHosts": "*",
   "Smtp": {
-    "Host": "127.0.0.1",
-    "Username": "username",
-    "Password": "password"
+    "Host": "mailrelay",
+    "Username": "",
+    "Password": ""
   }
 }
