Admin event email endpoint

--- a/ODK.Web.Api/appsettings.json
+++ b/ODK.Web.Api/appsettings.json
@@ -16,8 +16,10 @@
     },
     "Urls": {
       "ActivateAccount": "/account/activate?token={token}",
-      "PasswordReset": "/account/passwordreset?token={token}",
-      "WebBase": "http://localhost:4200"
+      "Base": "http://localhost:4200",
+      "Event": "/{chapter.name}/events/{event.id}",
+      "EventRsvp": "/{chapter.name}/events/{event.id}?token={token}",
+      "PasswordReset": "/account/passwordreset?token={token}"
     }
   },
   "Logging": {
