Member image etag

--- a/ODK.Web.Api/ODK.Web.Api.csproj
+++ b/ODK.Web.Api/ODK.Web.Api.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ODK.Core\ODK.Core.csproj" />
     <ProjectReference Include="..\ODK.Data\ODK.Data.csproj" />
+    <ProjectReference Include="..\ODK.Services.Imaging\ODK.Services.Imaging.csproj" />
     <ProjectReference Include="..\ODK.Services.Mails\ODK.Services.Mails.csproj" />
     <ProjectReference Include="..\ODK.Services\ODK.Services.csproj" />
   </ItemGroup>
