Resize uploaded images

--- a/ODK.Web.Api/appsettings.json
+++ b/ODK.Web.Api/appsettings.json
@@ -14,6 +14,9 @@
       "AllowedMethods": "GET,POST,PUT,PATCH,DELETE,OPTIONS",
       "AllowedHeaders": "*"
     },
+    "Members": {
+      "MaxImageSize": 250 /* maximum height or width */
+    },
     "Urls": {
       "ActivateAccount": "/account/activate?token={token}",
       "Base": "http://localhost:4200",
