Confirm contact request emails sent

--- a/ODK.Web.Api/appsettings.json
+++ b/ODK.Web.Api/appsettings.json
@@ -17,6 +17,11 @@
     "Members": {
       "MaxImageSize": 250 /* maximum height or width */
     },
+    "Smtp": {
+      "Host": "mailrelay",
+      "Username": "",
+      "Password": ""
+    },
     "Urls": {
       "ActivateAccount": "/account/activate?token={token}",
       "Base": "http://localhost:4200",
@@ -32,10 +37,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "Smtp": {
-    "Host": "mailrelay",
-    "Username": "",
-    "Password": ""
-  }
+  "AllowedHosts": "*"
 }
