Move admin into module (now broken)

--- a/ODK.Web.Api/web.config
+++ b/ODK.Web.Api/web.config
@@ -5,9 +5,10 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="C:\git\ODK\ODK.Web.Api\bin\Debug\netcoreapp3.0\ODK.Web.Api.exe" arguments="" stdoutLogEnabled="false" hostingModel="InProcess">
+      <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" hostingModel="InProcess">
         <environmentVariables>
           <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
+          <environmentVariable name="COMPLUS_ForceENC" value="1" />
         </environmentVariables>
       </aspNetCore>
     </system.webServer>
