--- a/ODK.Core/ODK.Core.csproj
+++ b/ODK.Core/ODK.Core.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="System.Drawing.Common" Version="4.6.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Payments\" />
+  </ItemGroup>
+
 </Project>
