--- a/ODK.Core/ODK.Core.csproj
+++ b/ODK.Core/ODK.Core.csproj
@@ -6,11 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="4.6.1" />
+    <Compile Remove="Payments\**" />
+    <EmbeddedResource Remove="Payments\**" />
+    <None Remove="Payments\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Payments\" />
+    <PackageReference Include="System.Drawing.Common" Version="4.6.1" />
   </ItemGroup>
 
 </Project>
