--- a/ODK.Website.Api/ODK.Web.Api/appsettings.json
+++ b/ODK.Website.Api/ODK.Web.Api/appsettings.json
@@ -27,7 +27,7 @@
       "Base": "http://localhost:4200",
       "Event": "/{chapter.name}/events/{event.id}",
       "EventRsvp": "/{chapter.name}/events/{event.id}?token={token}",
-      "PasswordReset": "/account/passwordreset?token={token}"
+      "PasswordReset": "/account/password/reset?token={token}"
     }
   },
   "Logging": {
