Add email reads

--- a/ODK.Website.Api/ODK.Web.Api/appsettings.json
+++ b/ODK.Website.Api/ODK.Web.Api/appsettings.json
@@ -25,6 +25,7 @@
     "Urls": {
       "ActivateAccount": "/account/activate?token={token}",
       "Base": "http://localhost:4200",
+      "EmailRead":  "/Emails/{email.id}/Read",
       "Event": "/{chapter.name}/events/{event.id}",
       "EventRsvp": "/{chapter.name}/events/{event.id}?token={token}",
       "PasswordReset": "/account/password/reset?token={token}"
