--- a/ODK.Website.Angular/package.json
+++ b/ODK.Website.Angular/package.json
@@ -22,6 +22,7 @@
     "@ckeditor/ckeditor5-angular": "^1.1.2",
     "@ckeditor/ckeditor5-build-classic": "^15.0.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "@types/stripe-v3": "^3.1.9",
     "bootstrap": "^4.3.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
