--- a/ODK.Website.Angular/tsconfig.app.json
+++ b/ODK.Website.Angular/tsconfig.app.json
@@ -6,7 +6,8 @@
   },
   "files": [
     "src/main.ts",
-    "src/polyfills.ts"
+    "src/polyfills.ts",
+    "node_modules\\@types\\stripe-v3"
   ],
   "include": [
     "src/**/*.ts"
