--- a/ODK.Website.Angular/tsconfig.app.json
+++ b/ODK.Website.Angular/tsconfig.app.json
@@ -7,7 +7,7 @@
   "files": [
     "src/main.ts",
     "src/polyfills.ts",
-    "node_modules\\@types\\stripe-v3"
+    "node_modules\\@types\\stripe-v3\\index.d.ts"
   ],
   "include": [
     "src/**/*.ts"
