Add chapter account routes

--- a/ODK.Website.Api/ODK.Web.Api/appsettings.json
+++ b/ODK.Website.Api/ODK.Web.Api/appsettings.json
@@ -23,12 +23,13 @@
       "Password": ""
     },
     "Urls": {
-      "ActivateAccount": "/account/activate?token={token}",
+      "ActivateAccount": "{chapter.name}/account/activate?token={token}",
+      "ApiBase": "http://localhost:5000",
+      "ApiEmailRead":  "/Emails/{email.id}/Read",
       "Base": "http://localhost:4200",
-      "EmailRead":  "/Emails/{email.id}/Read",
       "Event": "/{chapter.name}/events/{event.id}",
       "EventRsvp": "/{chapter.name}/events/{event.id}?token={token}",
-      "PasswordReset": "/account/password/reset?token={token}"
+      "PasswordReset": "{chapter.name}/password/reset?token={token}"
     }
   },
   "Logging": {
