Add file logging

--- a/ODK.Website.Api/ODK.Web.Api/appsettings.Development.json
+++ b/ODK.Website.Api/ODK.Web.Api/appsettings.Development.json
@@ -1,4 +1,27 @@
 {
+  "ConnectionStrings": {
+    "Default": "server=.\\SQLEXPRESS;database=odk;user id=umbraco-admin;password='umbraco-admin'"
+  },
+  "AppSettings": {
+    "Auth": {
+      "AccessTokenLifetimeMinutes": 20,
+      "Key": "this is a local token that is replaced in production",
+      "PasswordResetTokenLifetimeMinutes": 30,
+      "RefreshTokenLifetimeDays": 30
+    },
+    "Cors": {
+      "AllowedOrigins": "http://localhost:4200"
+    },
+    "Smtp": {
+      "Host": "mailrelay",
+      "Username": "",
+      "Password": ""
+    },
+    "Urls": {
+      "ApiBase": "http://localhost:5000",
+      "Base": "http://localhost:4200"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
