--- a/ODK.Website.Api/ODK.Web.Api/appsettings.json
+++ b/ODK.Website.Api/ODK.Web.Api/appsettings.json
@@ -1,43 +1,26 @@
 {
-  "ConnectionStrings": {
-    "Default": "server=.\\SQLEXPRESS;database=odk;user id=umbraco-admin;password='umbraco-admin'"
-  },
   "AppSettings": {
-    "Auth": {
-      "AccessTokenLifetimeMinutes": 20,
-      "Key": "this is a local token that is replaced in production",
-      "PasswordResetTokenLifetimeMinutes": 30,
-      "RefreshTokenLifetimeDays": 1
-    },
     "Cors": {
-      "AllowedOrigins": "http://localhost:4200",
       "AllowedMethods": "GET,POST,PUT,PATCH,DELETE,OPTIONS",
       "AllowedHeaders": "*"
     },
     "Members": {
       "MaxImageSize": 250 /* maximum height or width */
     },
-    "Smtp": {
-      "Host": "mailrelay",
-      "Username": "",
-      "Password": ""
-    },
     "Urls": {
       "ActivateAccount": "{chapter.name}/account/activate?token={token}",
-      "ApiBase": "http://localhost:5000",
       "ApiEmailRead":  "/Emails/{email.id}/Read",
-      "Base": "http://localhost:4200",
       "Event": "/{chapter.name}/events/{event.id}",
       "EventRsvp": "/{chapter.name}/events/{event.id}?token={token}",
       "PasswordReset": "{chapter.name}/password/reset?token={token}"
     }
   },
   "Logging": {
+    "Path": ".\\Logs",
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
