--- a/ODK.Website.Angular/package.json
+++ b/ODK.Website.Angular/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve --open --aot",
     "build": "ng build --prod --output-path=dist/prod",
+    "build-staging": "ng build --prod --configuration=staging --output-path=dist/staging",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
