Add image to join page

--- a/ODK.Website.Api/ODK.Web.Api/appsettings.json
+++ b/ODK.Website.Api/ODK.Web.Api/appsettings.json
@@ -8,11 +8,11 @@
       "MaxImageSize": 250 /* maximum height or width */
     },
     "Urls": {
-      "ActivateAccount": "{chapter.name}/account/activate?token={token}",
+      "ActivateAccount": "/{chapter.name}/account/activate?token={token}",
       "ApiEmailRead":  "/Emails/{email.id}/Read",
       "Event": "/{chapter.name}/events/{event.id}",
       "EventRsvp": "/{chapter.name}/events/{event.id}?token={token}",
-      "PasswordReset": "{chapter.name}/password/reset?token={token}"
+      "PasswordReset": "/{chapter.name}/password/reset?token={token}"
     }
   },
   "Logging": {
