--- a/ODK.Website.Angular/angular.json
+++ b/ODK.Website.Angular/angular.json
@@ -31,6 +31,7 @@
               "node_modules/@fortawesome/fontawesome-free/css/solid.min.css",
               "node_modules/@fortawesome/fontawesome-free/css/brands.min.css",
               "node_modules/@fortawesome/fontawesome-free/css/fontawesome.min.css",
+              "node_modules/@ng-select/ng-select/themes/default.theme.css",
               "src/css/main.scss"
             ],
             "scripts": []
