Send event emails using MailChimp

--- a/ODK.Website.Api/ODK.Web.Api/appsettings.json
+++ b/ODK.Website.Api/ODK.Web.Api/appsettings.json
@@ -9,9 +9,8 @@
     },
     "Urls": {
       "ActivateAccount": "/{chapter.name}/account/activate?token={token}",
-      "ApiEmailRead":  "/Emails/{email.id}/Read",
       "Event": "/{chapter.name}/events/{event.id}",
-      "EventRsvp": "/{chapter.name}/events/{event.id}?token={token}",
+      "EventRsvp": "/{chapter.name}/events/{event.id}?rsvp=yes",
       "PasswordReset": "/{chapter.name}/password/reset?token={token}"
     }
   },
