--- a/ODK.Website.Api/ODK.Services.Mails/ODK.Services.Mails.csproj
+++ b/ODK.Website.Api/ODK.Services.Mails/ODK.Services.Mails.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailChimp.Net.V3" Version="4.2.1" />
     <PackageReference Include="MailKit" Version="2.4.1" />
   </ItemGroup>
 
