--- a/ODK.Website.Api/ODK.Services.Mails/ODK.Services.Mails.csproj
+++ b/ODK.Website.Api/ODK.Services.Mails/ODK.Services.Mails.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="MailChimp.Net.V3" Version="4.2.1" />
     <PackageReference Include="MailKit" Version="2.4.1" />
+    <PackageReference Include="RestSharp" Version="106.6.10" />
   </ItemGroup>
 
   <ItemGroup>
