--- a/ODK.Website.Api/ODK.Web.Api/appsettings.json
+++ b/ODK.Website.Api/ODK.Web.Api/appsettings.json
@@ -11,6 +11,7 @@
       "ActivateAccount": "/{chapter.name}/account/activate?token={token}",
       "Event": "/{chapter.name}/events/{event.id}",
       "EventRsvp": "/{chapter.name}/events/{event.id}?rsvp=yes",
+      "Events": "/{chapter.name}/events",
       "PasswordReset": "/{chapter.name}/password/reset?token={token}"
     }
   },
