--- a/ODK.Website.Api/ODK.Web.Api/appsettings.json
+++ b/ODK.Website.Api/ODK.Web.Api/appsettings.json
@@ -9,6 +9,7 @@
     },
     "Urls": {
       "ActivateAccount": "/{chapter.name}/account/activate?token={token}",
+      "ConfirmEmailAddressUpdate": "/{chapter.name}/profile/update-email-address/?token={token}",
       "Event": "/{chapter.name}/events/{event.id}",
       "EventRsvp": "/{chapter.name}/events/{event.id}?rsvp=yes",
       "Events": "/{chapter.name}/events",
