--- a/ODK.Website.Api/ODK.Services/ODK.Services.csproj
+++ b/ODK.Website.Api/ODK.Services/ODK.Services.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="InstaSharper-latest" Version="1.5.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.0.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
     <PackageReference Include="System.Runtime.Caching" Version="4.6.0" />
