(deployment): update app and api deployment workflow

--- a/ODK.Website.Angular/.gitignore
+++ b/ODK.Website.Angular/.gitignore
@@ -42,8 +42,9 @@ testem.log
 /typings
 
 # sensitive data
-/src/environments/environment.prod.ts
+/src/environments/environment.production.ts
 /src/environments/environment.staging.ts
+src/environments/production/web.config
 
 # System Files
 .DS_Store
