--- a/ODK.Website.Angular/src/environments/staging/web.config
+++ b/ODK.Website.Angular/src/environments/staging/web.config
@@ -8,6 +8,10 @@
     </staticContent>
     <rewrite>
       <rules>
+        <rule name="API Routes" stopProcessing="true">
+          <match url="^(api)(.*)$" />
+          <action type="None" />
+        </rule>        
         <rule name="Angular Routes" stopProcessing="true">
           <match url=".*" />
           <conditions logicalGrouping="MatchAll">
