--- a/ODK.Website.Api/ODK.Web.Api/appsettings.Development.json
+++ b/ODK.Website.Api/ODK.Web.Api/appsettings.Development.json
@@ -13,15 +13,10 @@
       "AllowedOrigins": "http://localhost:4200"
     },
     "Urls": {
-      "ApiBase": "http://localhost:5000",
       "Base": "http://localhost:4200"
     }
   },
   "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
+    "Path": ".\\Logs"
   }
 }
