--- a/ODK.Website.Api/ODK.Web.Api/ODK.Web.Api.csproj
+++ b/ODK.Website.Api/ODK.Web.Api/ODK.Web.Api.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Serilog" Version="2.9.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
+    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.1.3" />
   </ItemGroup>
 
   <ItemGroup>
