--- a/ODK.Website.Api/ODK.Services.Mails/ODK.Services.Mails.csproj
+++ b/ODK.Website.Api/ODK.Services.Mails/ODK.Services.Mails.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <RootNamespace>ODK.Services.Emails</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
