(event emails): add unsubscribe link

--- a/ODK.Website.Api/ODK.Web.Api/appsettings.json
+++ b/ODK.Website.Api/ODK.Web.Api/appsettings.json
@@ -13,7 +13,8 @@
       "Event": "/{chapter.name}/events/{event.id}",
       "EventRsvp": "/{chapter.name}/events/{event.id}?rsvp=yes",
       "Events": "/{chapter.name}/events",
-      "PasswordReset": "/{chapter.name}/password/reset?token={token}"
+      "PasswordReset": "/{chapter.name}/password/reset?token={token}",
+      "Unsubscribe": "/{chapter.name}/profile/emails"
     }
   }
 }
