(deploy): add api file manager for better remote file management

--- a/ODK.Website.Api/.gitignore
+++ b/ODK.Website.Api/.gitignore
@@ -2,7 +2,6 @@
 *.user
 bin
 obj
-/ODK.Web.Api/appsettings.Production.json
-/ODK.Web.Api/appsettings.Staging.json
+appsettings.*.json
 /ODK.Web.Api/Logs
 *.pubxml
