--- a/ODK.Deploy/.gitignore
+++ b/ODK.Deploy/.gitignore
@@ -2,7 +2,5 @@
 *.user
 bin
 obj
-/ODK.Web.Api/appsettings.Production.json
-/ODK.Web.Api/appsettings.Staging.json
-/ODK.Web.Api/Logs
+appsettings.*.json
 *.pubxml
