--- a/ODK.Deploy/ODK.Remote.Web.Api/ODK.Remote.Web.Api.csproj
+++ b/ODK.Deploy/ODK.Remote.Web.Api/ODK.Remote.Web.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ODK.Deploy.Services\ODK.Deploy.Services.csproj" />
+    <ProjectReference Include="..\ODK.Remote.Services\ODK.Remote.Services.csproj" />
   </ItemGroup>
 
 </Project>
