--- a/ODK.Deploy/ODK.Deploy.Web.Mvc/ODK.Deploy.Web.Mvc.csproj
+++ b/ODK.Deploy/ODK.Deploy.Web.Mvc/ODK.Deploy.Web.Mvc.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ODK.Deploy.Core\ODK.Deploy.Core.csproj" />
     <ProjectReference Include="..\ODK.Deploy.Data\ODK.Deploy.Data.csproj" />
-    <ProjectReference Include="..\ODK.Deploy.Services\ODK.Deploy.Services.csproj" />
     <ProjectReference Include="..\ODK.Remote.Services\ODK.Remote.Services.csproj" />
   </ItemGroup>
 
