--- a/ODK.Deploy/ODK.Deploy.Services/ODK.Deploy.Services.csproj
+++ b/ODK.Deploy/ODK.Deploy.Services/ODK.Deploy.Services.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\ODK.Deploy.Core\ODK.Deploy.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Servers\" />
+  </ItemGroup>
+
 </Project>
