--- a/ODK.Deploy/ODK.Deploy.Web.Mvc/ODK.Deploy.Web.Mvc.csproj
+++ b/ODK.Deploy/ODK.Deploy.Web.Mvc/ODK.Deploy.Web.Mvc.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ODK.Deploy.Core\ODK.Deploy.Core.csproj" />
     <ProjectReference Include="..\ODK.Deploy.Data\ODK.Deploy.Data.csproj" />
+    <ProjectReference Include="..\ODK.Deploy.Services\ODK.Deploy.Services.csproj" />
     <ProjectReference Include="..\ODK.Remote.Services\ODK.Remote.Services.csproj" />
   </ItemGroup>
 
