(refactor): merge admin api back into main api. Updating the cache relies on a shared in-memory cache

--- a/ODK.Website.Angular/src/environments/staging/web.config
+++ b/ODK.Website.Angular/src/environments/staging/web.config
@@ -9,7 +9,7 @@
     <rewrite>
       <rules>
         <rule name="API Routes" stopProcessing="true">
-          <match url="^(api|adminapi)(.*)$" />
+          <match url="^(api)(.*)$" />
           <action type="None" />
         </rule>        
         <rule name="Angular Routes" stopProcessing="true">
