(media admin): add crude read-only media listing page

--- a/ODK.Website.Angular/angular.json
+++ b/ODK.Website.Angular/angular.json
@@ -38,7 +38,9 @@
           "configurations": {
             "production": {
               "assets": [
-                { "glob": "**/*", "input": "src/assets/", "output": "/assets/" },
+                { "glob": "**/*", "input": "src/assets/", "output": "/assets/", "ignore": [ 
+                  "media/**/*"
+                ] },
                 { "glob": "web.config", "input": "src/environments/production", "output": "/" }
               ],
               "fileReplacements": [
@@ -71,7 +73,9 @@
             },
             "staging": {
               "assets": [
-                { "glob": "**/*", "input": "src/assets/", "output": "/assets/" },
+                { "glob": "**/*", "input": "src/assets/", "output": "/assets/", "ignore": [ 
+                  "media/**/*"
+                ] },
                 { "glob": "web.config", "input": "src/environments/staging", "output": "/" }
               ],
               "fileReplacements": [
