--- a/ODK.Website.Api/ODK.Web.Api/appsettings.json
+++ b/ODK.Website.Api/ODK.Web.Api/appsettings.json
@@ -13,6 +13,7 @@
       "Event": "/{chapter.name}/events/{event.id}",
       "EventRsvp": "/{chapter.name}/events/{event.id}?rsvp=yes",
       "Events": "/{chapter.name}/events",
+      "Media": "/assets/media/{chapter.name}",
       "PasswordReset": "/{chapter.name}/password/reset?token={token}",
       "Unsubscribe": "/{chapter.name}/profile/emails"
     }
