(media): store media in api, not app

--- a/ODK.Website.Angular/angular.json
+++ b/ODK.Website.Angular/angular.json
@@ -38,9 +38,7 @@
           "configurations": {
             "production": {
               "assets": [
-                { "glob": "**/*", "input": "src/assets/", "output": "/assets/", "ignore": [ 
-                  "media/**/*"
-                ] },
+                { "glob": "**/*", "input": "src/assets/", "output": "/assets/" },
                 { "glob": "web.config", "input": "src/environments/production", "output": "/" }
               ],
               "fileReplacements": [
@@ -73,9 +71,7 @@
             },
             "staging": {
               "assets": [
-                { "glob": "**/*", "input": "src/assets/", "output": "/assets/", "ignore": [ 
-                  "media/**/*"
-                ] },
+                { "glob": "**/*", "input": "src/assets/", "output": "/assets/" },
                 { "glob": "web.config", "input": "src/environments/staging", "output": "/" }
               ],
               "fileReplacements": [
