--- a/ODK.Website.Angular/package.json
+++ b/ODK.Website.Angular/package.json
@@ -26,6 +26,7 @@
     "@ng-select/ng-select": "^3.7.1",
     "@types/stripe-v3": "^3.1.14",
     "bootstrap": "^4.4.1",
+    "ngx-clipboard": "^12.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
