--- a/ODK.Website.Angular/package.json
+++ b/ODK.Website.Angular/package.json
@@ -22,8 +22,8 @@
     "@angular/router": "~8.2.14",
     "@ckeditor/ckeditor5-angular": "^1.1.2",
     "@ckeditor/ckeditor5-build-classic": "^15.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.5",
-    "@ng-select/ng-select": "^3.7.1",
+    "@ng-bootstrap/ng-bootstrap": "^5.2.1",
+    "@ng-select/ng-select": "^3.7.2",
     "@types/stripe-v3": "^3.1.14",
     "bootstrap": "^4.4.1",
     "ngx-clipboard": "^12.3.0",
@@ -32,9 +32,9 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.22",
-    "@angular-devkit/build-ng-packagr": "^0.803.22",
-    "@angular/cli": "^8.3.22",
+    "@angular-devkit/build-angular": "^0.803.24",
+    "@angular-devkit/build-ng-packagr": "^0.803.24",
+    "@angular/cli": "^8.3.24",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
     "@fortawesome/fontawesome-free": "^5.12.0",
@@ -50,7 +50,7 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.1",
     "ng-packagr": "^5.4.0",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
     "tsickle": "^0.37.0",
     "tslint": "~5.15.0",
