--- a/ODK.Website.Api/ODK.Web.Api/ODK.Web.Api.csproj
+++ b/ODK.Website.Api/ODK.Web.Api/ODK.Web.Api.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="14.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
   </ItemGroup>
 
