--- a/ODK.Website.Angular/package.json
+++ b/ODK.Website.Angular/package.json
@@ -22,13 +22,13 @@
     "@angular/platform-browser-dynamic": "^9.0.4",
     "@angular/router": "^9.0.1",
     "@ckeditor/ckeditor5-angular": "^1.2.1",
-    "@ckeditor/ckeditor5-build-classic": "^16.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^17.0.0",
     "@ckeditor/ckeditor5-watchdog": "^17.0.0",
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "@ng-select/ng-select": "^3.7.2",
     "@types/stripe-v3": "^3.1.15",
     "bootstrap": "^4.4.1",
-    "ngx-clipboard": "^12.3.1",
+    "ngx-clipboard": "^13.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.11.1",
     "zone.js": "~0.10.2"
@@ -40,21 +40,21 @@
     "@angular/compiler-cli": "^9.0.4",
     "@angular/language-service": "^9.0.4",
     "@fortawesome/fontawesome-free": "^5.12.1",
-    "@types/jasmine": "~3.3.8",
+    "@types/jasmine": "^3.5.7",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.28",
+    "@types/node": "^13.7.6",
     "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.4.0",
+    "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "^3.1.1",
     "karma-jasmine-html-reporter": "^1.5.2",
     "ng-packagr": "^9.0.2",
     "protractor": "^5.4.3",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.7.5"
+    "ts-node": "^8.6.2",
+    "tslint": "^5.15.0",
+    "typescript": "^3.7.5"
   }
 }
