--- a/ODK.Website.Api/ODK.Web.Api/appsettings.json
+++ b/ODK.Website.Api/ODK.Web.Api/appsettings.json
@@ -9,13 +9,13 @@
     },
     "Urls": {
       "ActivateAccount": "/{chapter.name}/account/activate?token={token}",
-      "ConfirmEmailAddressUpdate": "/{chapter.name}/profile/update-email-address/?token={token}",
+      "ConfirmEmailAddressUpdate": "/{chapter.name}/account/update-email-address/?token={token}",
       "Event": "/{chapter.name}/events/{event.id}",
       "EventRsvp": "/{chapter.name}/events/{event.id}?rsvp=yes",
       "Events": "/{chapter.name}/events",
       "Media": "/media/{chapter.name}/{name}",
-      "PasswordReset": "/{chapter.name}/password/reset?token={token}",
-      "Unsubscribe": "/{chapter.name}/profile/emails"
+      "PasswordReset": "/{chapter.name}/account/password/reset?token={token}",
+      "Unsubscribe": "/{chapter.name}/account/emails"
     }
   }
 }
