--- a/ODK.Website.Angular/package.json
+++ b/ODK.Website.Angular/package.json
@@ -12,50 +12,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.6",
-    "@angular/common": "^9.0.6",
-    "@angular/compiler": "^9.0.6",
-    "@angular/core": "^9.0.6",
-    "@angular/forms": "^9.0.6",
-    "@angular/localize": "^9.0.6",
-    "@angular/platform-browser": "^9.0.6",
-    "@angular/platform-browser-dynamic": "^9.0.6",
-    "@angular/router": "^9.0.6",
-    "@ckeditor/ckeditor5-angular": "^1.2.2",
+    "@angular/animations": "^9.1.1",
+    "@angular/common": "^9.1.1",
+    "@angular/compiler": "^9.1.1",
+    "@angular/core": "^9.1.1",
+    "@angular/forms": "^9.1.1",
+    "@angular/localize": "^9.1.1",
+    "@angular/platform-browser": "^9.1.1",
+    "@angular/platform-browser-dynamic": "^9.1.1",
+    "@angular/router": "^9.1.1",
+    "@ckeditor/ckeditor5-angular": "^1.2.3",
     "@ckeditor/ckeditor5-build-classic": "^17.0.0",
     "@ckeditor/ckeditor5-watchdog": "^17.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "@ng-select/ng-select": "^3.7.3",
     "@types/stripe-v3": "^3.1.17",
     "bootstrap": "^4.4.1",
     "ng-lazyload-image": "^7.1.0",
     "ngx-clipboard": "^13.0.0",
-    "rxjs": "~6.5.4",
+    "rxjs": "^6.5.5",
     "tslib": "^1.11.1",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.900.6",
-    "@angular-devkit/build-ng-packagr": "^0.900.6",
-    "@angular/cli": "^9.0.6",
-    "@angular/compiler-cli": "^9.0.6",
-    "@angular/language-service": "^9.0.6",
-    "@fortawesome/fontawesome-free": "^5.12.1",
-    "@types/jasmine": "^3.5.9",
+    "@angular-devkit/build-angular": "^0.901.1",
+    "@angular-devkit/build-ng-packagr": "^0.901.1",
+    "@angular/cli": "^9.1.1",
+    "@angular/compiler-cli": "^9.1.1",
+    "@angular/language-service": "^9.1.1",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^13.9.0",
-    "codelyzer": "^5.1.2",
+    "@types/node": "^13.11.1",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "^3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.2",
-    "ng-packagr": "^9.0.3",
+    "karma-jasmine-html-reporter": "^1.5.3",
+    "ng-packagr": "^9.1.0",
     "protractor": "^5.4.3",
-    "ts-node": "^8.6.2",
+    "ts-node": "^8.8.2",
     "tslint": "^5.20.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.8.3"
   }
 }
