(Payments): add PayPal

--- a/ODK.Website.Api/ODK.Web.Api/appsettings.json
+++ b/ODK.Website.Api/ODK.Web.Api/appsettings.json
@@ -7,6 +7,9 @@
     "Members": {
       "MaxImageSize": 250 /* maximum height or width */
     },
+    "Payments": {
+      "PayPalApiBaseUrl": "https://api-m.sandbox.paypal.com"
+    },
     "Urls": {
       "ActivateAccount": "/{chapter.name}/account/activate?token={token}",
       "ConfirmEmailAddressUpdate": "/{chapter.name}/account/update-email-address/?token={token}",
