--- a/ODK.Website.Api/ODK.Web.Api/ODK.Web.Api.csproj
+++ b/ODK.Website.Api/ODK.Web.Api/ODK.Web.Api.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
@@ -15,7 +15,6 @@
     <ProjectReference Include="..\ODK.Data\ODK.Data.csproj" />
     <ProjectReference Include="..\ODK.Services.Imaging\ODK.Services.Imaging.csproj" />
     <ProjectReference Include="..\ODK.Services.Mails\ODK.Services.Mails.csproj" />
-    <ProjectReference Include="..\ODK.Services.Payments.Stripe\ODK.Services.Payments.Stripe.csproj" />
     <ProjectReference Include="..\ODK.Services\ODK.Services.csproj" />
     <ProjectReference Include="..\ODK.Web.Common\ODK.Web.Common.csproj" />
   </ItemGroup>
