--- a/ODK.Website.Api/ODK.Web.Common/ODK.Web.Common.csproj
+++ b/ODK.Website.Api/ODK.Web.Common/ODK.Web.Common.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Caching\**" />
+    <EmbeddedResource Remove="Caching\**" />
+    <None Remove="Caching\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.0.0" />
@@ -23,10 +29,6 @@
     <ProjectReference Include="..\ODK.Services.Mails\ODK.Services.Mails.csproj" />
     <ProjectReference Include="..\ODK.Services.Payments\ODK.Services.Payments.csproj" />
     <ProjectReference Include="..\ODK.Services\ODK.Services.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Caching\" />
   </ItemGroup>
 
 </Project>
