--- a/ODK.Website.Api/ODK.Web.Razor/ODK.Web.Razor.csproj
+++ b/ODK.Website.Api/ODK.Web.Razor/ODK.Web.Razor.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.20" />
+    <PackageReference Include="Microsoft.AspNetCore.Routing" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
