Add bulk emailing

--- a/ODK.Web.Razor/ODK.Web.Razor.csproj
+++ b/ODK.Web.Razor/ODK.Web.Razor.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ODK.Core\ODK.Core.csproj" />
     <ProjectReference Include="..\ODK.Web.Common\ODK.Web.Common.csproj" />
   </ItemGroup>
 
