--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -4,6 +4,9 @@
       "AllowedMethods": "GET,POST,PUT,PATCH,DELETE,OPTIONS",
       "AllowedHeaders": "*"
     },
+    "Emails": {
+      "DebugEmailAddress": null
+    },
     "Members": {
       "MaxImageSize": 250 /* maximum height or width */
     },
