(superadmin): has member permissions

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -7,6 +7,9 @@
     "Emails": {
       "DebugEmailAddress": null
     },
+    "Errors": {
+      "Handle": true
+    },
     "Members": {
       "MaxImageSize": 250 /* maximum height or width */
     },
