improve error handling

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -16,6 +16,9 @@
     "Payments": {
       "PayPalApiBaseUrl": "https://api-m.sandbox.paypal.com"
     },
+    "ScheduledTasks": {
+      "ApiKey": ""
+    },
     "Urls": {
       "ActivateAccount": "/{chapter.name}/Account/Activate?token={token}",
       "ConfirmEmailAddressUpdate": "/{chapter.name}/Account/Email/Change/Confirm?token={token}",
