--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -11,7 +11,9 @@
       "Handle": true
     },
     "Members": {
-      "MaxImageSize": 250 /* maximum height or width */
+      "AvatarSize": 75,
+      "MaxImageSize": 250, /* maximum height or width */
+      "UseAvatars": true
     },
     "Payments": {
       "PayPalApiBaseUrl": "https://api-m.sandbox.paypal.com"
