--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -12,8 +12,7 @@
     },
     "Members": {
       "AvatarSize": 75,
-      "MaxImageSize": 250, /* maximum height or width */
-      "UseAvatars": true
+      "MaxImageSize": 250 /* maximum height or width */
     },
     "Payments": {
       "PayPalApiBaseUrl": "https://api-m.sandbox.paypal.com"
