--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -11,6 +11,7 @@
       "Handle": true
     },
     "Members": {
+      "AvatarSize": 75,
       "MaxImageSize": 250 /* maximum height or width */
     },
     "Payments": {
