--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -13,6 +13,9 @@
     "AvatarSize": 75,
     "MaxImageSize": 250 /* maximum height or width */
   },
+  "Paths": {
+    "MediaRoot": ""
+  },
   "Payments": {
     "PayPalApiBaseUrl": "https://api-m.sandbox.paypal.com"
   },
