--- a/ODK.Data.EntityFramework/ODK.Data.EntityFramework.csproj
+++ b/ODK.Data.EntityFramework/ODK.Data.EntityFramework.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.NetTopologySuite" Version="8.0.7" />
     <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="8.103.1" />
   </ItemGroup>
 
