--- a/ODK.Web.Razor/compilerconfig.json
+++ b/ODK.Web.Razor/compilerconfig.json
@@ -1,10 +1,14 @@
-﻿[
+[
   {
     "outputFile": "wwwroot/css/main.css",
-    "inputFile": "wwwroot/css/main.scss"
+    "inputFile": "wwwroot/css/main.scss",
+    "sourceMap": false,
+    "useNodeSass": false
   },
   {
     "outputFile": "wwwroot/css/odk.css",
-    "inputFile": "wwwroot/css/odk.scss"
+    "inputFile": "wwwroot/css/odk.scss",
+    "sourceMap": false,
+    "useNodeSass": false
   }
 ]
