--- a/ODK.Services.Payments/ODK.Services.Payments.csproj
+++ b/ODK.Services.Payments/ODK.Services.Payments.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Stripe.net" Version="45.4.0" />
   </ItemGroup>
 
