--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -17,7 +17,11 @@
     "MediaRoot": ""
   },
   "Payments": {
-    "PayPalApiBaseUrl": "https://api-m.sandbox.paypal.com"
+    "PayPal": {
+      "ApiBaseUrl": "https://api-m.sandbox.paypal.com",
+      "ApiPublicKey": "",
+      "ApiSecretKey": ""
+    }
   },
   "Platforms": [],
   "ScheduledTasks": {
