(logging): add BetterStack

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "BetterStack": {
+    "SourceToken": ""
+  },
   "Cors": {
     "AllowedMethods": "GET,POST,PUT,PATCH,DELETE,OPTIONS",
     "AllowedHeaders": "*"
