(auth): Google login

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Auth": {
+    "CookieLifetimeDays": 30,
+    "PasswordResetTokenLifetimeMinutes": 30
+  },
   "BetterStack": {
     "SourceToken": ""
   },
@@ -15,6 +19,12 @@
   "Members": {
     "AvatarSize": 75,
     "MaxImageSize": 250 /* maximum height or width */
+  },
+  "OAuth": {
+    "Google": {
+      "ClientId": "",
+      "ClientSecret": ""
+    }
   },
   "Paths": {
     "MediaRoot": ""
