--- a/ODK.Services.Integrations/ODK.Services.Integrations.csproj
+++ b/ODK.Services.Integrations/ODK.Services.Integrations.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis.Auth" Version="1.68.0" />
     <PackageReference Include="MailKit" Version="4.7.1.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
