--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -34,6 +34,9 @@
       "ApiBaseUrl": "https://api-m.sandbox.paypal.com",
       "ApiPublicKey": "",
       "ApiSecretKey": ""
+    },
+    "Stripe": {
+      "ChapterSubscriptionCheckoutReturnPath": "/{Chapter}/account/subscription/{SubscriptionId}/Confirm?SessionId={SessionId}"
     }
   },
   "Platforms": [],
