Remove noise from logs, add info to some 404 errors

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -6,6 +6,9 @@
   "BetterStack": {
     "SourceToken": ""
   },
+  "ConnectionStrings": {
+    "Default": ""
+  },
   "Cors": {
     "AllowedMethods": "GET,POST,PUT,PATCH,DELETE,OPTIONS",
     "AllowedHeaders": "*"
@@ -15,7 +18,10 @@
   },
   "Errors": {
     "Handle": true
-  },  
+  },
+  "Logging": {
+    "Path": ""
+  },
   "Members": {
     "AvatarSize": 75,
     "MaxImageSize": 250 /* maximum height or width */
