--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -43,6 +43,10 @@
     }
   },
   "Platforms": [],
+  "RateLimiting": {
+    "BlockPatterns": [],
+    "BlockForSeconds": 0
+  },
   "ScheduledTasks": {
     "ApiKey": ""
   }
