Logging improvements; add Hangfire

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -19,6 +19,10 @@
   "Errors": {
     "Handle": true
   },
+  "Hangfire": {
+    "RetryAttempts": 3,
+    "SchemaName": "Hangfire"
+  },
   "Logging": {
     "Path": ""
   },
