(logging): prevent logging of certain non-malicious 404s

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -24,6 +24,9 @@
     "SchemaName": "Hangfire"
   },
   "Logging": {
+    "NotFound": {
+      "IgnorePatterns": []
+    },
     "Path": ""
   },
   "Members": {
