(hangfire): configure worker count

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -21,7 +21,8 @@
   },
   "Hangfire": {
     "RetryAttempts": 3,
-    "SchemaName": "Hangfire"
+    "SchemaName": "Hangfire",
+    "WorkerCount": 1
   },
   "Logging": {
     "NotFound": {
