Add chapter/login redirect

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -25,6 +25,10 @@
     "WorkerCount": 1
   },
   "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Hangfire": "None"
+    },
     "NotFound": {
       "IgnorePatterns": []
     },
