--- a/ODK.Services.Integrations/ODK.Services.Integrations.csproj
+++ b/ODK.Services.Integrations/ODK.Services.Integrations.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\ODK.Services\ODK.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Payments\Stripe\Models\" />
+  </ItemGroup>
+
 </Project>
