--- a/ODK.Web.Razor/ODK.Web.Razor.csproj
+++ b/ODK.Web.Razor/ODK.Web.Razor.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.471" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Routing" Version="2.3.0" />
+    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="3.0.71" />
   </ItemGroup>
 
   <ItemGroup>
