--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -54,7 +54,8 @@
       "ApiSecretKey": ""
     },
     "Stripe": {
-      "WebhookSecret": ""
+      "WebhookSecretV1": "",
+      "WebhookSecretV2": ""
     }
   },
   "Platforms": [],
