--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -54,6 +54,9 @@
       "ApiSecretKey": ""
     },
     "Stripe": {
+      "ConnectedAccountBaseUrl": "",
+      "ConnectedAccountMcc": "8641", // civic, fraternal, or social associations
+      "ConnectedAccountProductDescription": "Paid memberships for community and social groups",
       "WebhookSecretV1": "",
       "WebhookSecretV2": ""
     }
