--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -19,6 +19,11 @@
   "Errors": {
     "Handle": true
   },
+  "Google": {
+    "Geolocation": {
+      "ApiKey": ""
+    }
+  },
   "Hangfire": {
     "RetryAttempts": 3,
     "SchemaName": "Hangfire",
