--- a/ODK.Services.Integrations/ODK.Services.Integrations.csproj
+++ b/ODK.Services.Integrations/ODK.Services.Integrations.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GeoTimeZone" Version="6.1.0" />
     <PackageReference Include="Google.Apis.Auth" Version="1.73.0" />
     <PackageReference Include="MailKit" Version="4.14.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.0" />
