--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -1,7 +1,11 @@
 {
   "Auth": {
     "CookieLifetimeDays": 30,
-    "PasswordResetTokenLifetimeMinutes": 30
+    "PasswordResetTokenLifetimeMinutes": 30,
+    "Passwords": {
+      "Algorithm": "",
+      "Iterations": 0
+    }
   },
   "BetterStack": {
     "SourceToken": ""
@@ -74,5 +78,5 @@
   },
   "ScheduledTasks": {
     "ApiKey": ""
-  }  
+  }
 }
