Use Brevo API - remove email providers from DB

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -10,6 +10,9 @@
   "BetterStack": {
     "SourceToken": ""
   },
+  "Brevo": {
+    "ApiKey": ""
+  },
   "ConnectionStrings": {
     "Default": ""
   },
