Brevo webhook auth

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -11,7 +11,9 @@
     "SourceToken": ""
   },
   "Brevo": {
-    "ApiKey": ""
+    "ApiKey": "",
+    "WebhookPassword": "",
+    "WebhookPasswordHeader": ""
   },
   "ConnectionStrings": {
     "Default": ""
