Add WhatsApp link

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -83,5 +83,8 @@
   },
   "ScheduledTasks": {
     "ApiKey": ""
+  },
+  "WhatsApp": {
+    "UrlFormat": "https://chat.whatsapp.com/{groupid}"
   }
 }
