Schedule event emails using Hangfire

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -84,6 +84,12 @@
   "ScheduledTasks": {
     "ApiKey": ""
   },
+  "Theme": {
+    "Header": {
+      "Background": "#f00",
+      "Color": "#fff"
+    }
+  },
   "WhatsApp": {
     "UrlFormat": "https://chat.whatsapp.com/{groupid}"
   }
