Add email body theme; site name fallback for site-level emails

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -23,7 +23,17 @@
     "AllowedHeaders": "*"
   },
   "Emails": {
-    "DebugEmailAddress": null
+    "DebugEmailAddress": null,
+    "Theme": {
+      "Body": {
+        "Background": "#fff",
+        "Color": "#3c4858"
+      },
+      "Header": {
+        "Background": "#f00",
+        "Color": "#fff"
+      }
+    }
   },
   "Errors": {
     "Handle": true
@@ -83,12 +93,6 @@
   },
   "ScheduledTasks": {
     "ApiKey": ""
-  },
-  "Theme": {
-    "Header": {
-      "Background": "#f00",
-      "Color": "#fff"
-    }
   },
   "WhatsApp": {
     "UrlFormat": "https://chat.whatsapp.com/{groupid}"
