Move site settings into config; run Instagram scraper in a queue

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -41,12 +41,19 @@
   "Google": {
     "Geolocation": {
       "ApiKey": ""
+    },
+    "Maps": {
+      "ApiKey": ""
     }
   },
   "Hangfire": {
     "RetryAttempts": 3,
     "SchemaName": "Hangfire",
     "WorkerCount": 1
+  },
+  "Instagram": {
+    "FetchUserAgent": "",
+    "FetchWaitSeconds": 10
   },
   "Logging": {
     "LogLevel": {
@@ -90,6 +97,12 @@
   "RateLimiting": {
     "BlockPatterns": [],
     "BlockForSeconds": 0
+  },
+  "Recaptcha": {
+    "ScoreThreshold": 0.5,
+    "SecretKey": "",
+    "SiteKey": "",
+    "VerifyUrl": "https://www.google.com/recaptcha/api/siteverify"
   },
   "ScheduledTasks": {
     "ApiKey": ""
