--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -54,8 +54,10 @@
     "WorkerCount": 1
   },
   "Instagram": {
+    "FeedUrl": "https://www.instagram.com/api/v1/users/web_profile_info?username={username}",
     "FetchUserAgent": "",
-    "FetchWaitSeconds": 10
+    "FetchWaitSeconds": 10,
+    "PostUrl": "https://www.instagram.com/p/{id}?img_index=1"
   },
   "Logging": {
     "LogLevel": {
