--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -57,7 +57,7 @@
     "FeedUrl": "https://www.instagram.com/api/v1/users/web_profile_info?username={username}",
     "FetchUserAgent": "",
     "FetchWaitSeconds": 10,
-    "PostUrl": "https://www.instagram.com/p/{id}?img_index=1"
+    "PostUrl": "https://www.instagram.com/p/{id}"
   },
   "Logging": {
     "LogLevel": {
