Instagram post link; replace hashtags with links

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -54,10 +54,12 @@
     "WorkerCount": 1
   },
   "Instagram": {
+    "ChannelUrl": "https://www.instagram.com/{username}",
     "FeedUrl": "https://www.instagram.com/api/v1/users/web_profile_info?username={username}",
     "FetchUserAgent": "",
     "FetchWaitSeconds": 10,
-    "PostUrl": "https://www.instagram.com/p/{id}"
+    "PostUrl": "https://www.instagram.com/p/{id}",
+    "TagUrl": "https://www.instagram.com/explore/tags/{tag}"
   },
   "Logging": {
     "LogLevel": {
