--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -17,6 +17,7 @@
     "WebhookPassword": "",
     "WebhookPasswordHeader": ""
   },
+  "ChromePath": "",
   "ConnectionStrings": {
     "Default": ""
   },
@@ -54,12 +55,15 @@
     "WorkerCount": 1
   },
   "Instagram": {
-    "ChannelUrl": "https://www.instagram.com/{username}",
-    "FeedUrl": "https://www.instagram.com/api/v1/users/web_profile_info?username={username}",
-    "FetchUserAgent": "",
+    "BaseUrl": "https://www.instagram.com",
+    "ChannelPath": "/{username}",
+    "FeedPath": "/api/v1/users/web_profile_info?username={username}",
+    "FetcherCookies": {},
+    "FetcherHeaders": {},
+    "FetcherQueryHash": "",
     "FetchWaitSeconds": 10,
-    "PostUrl": "https://www.instagram.com/p/{id}",
-    "TagUrl": "https://www.instagram.com/explore/tags/{tag}"
+    "PostPath": "/p/{id}",
+    "TagPath": "/explore/tags/{tag}"
   },
   "Logging": {
     "LogLevel": {
