--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -17,7 +17,6 @@
     "WebhookPassword": "",
     "WebhookPasswordHeader": ""
   },
-  "ChromePath": "",
   "ConnectionStrings": {
     "Default": ""
   },
@@ -56,14 +55,20 @@
   },
   "Instagram": {
     "BaseUrl": "https://www.instagram.com",
-    "ChannelPath": "/{username}",
-    "FeedPath": "/api/v1/users/web_profile_info?username={username}",
-    "FetcherCookies": {},
-    "FetcherHeaders": {},
-    "FetcherQueryHash": "",
+    "Client": {
+      "Cookies": {},
+      "GraphQL": {
+        "PostsDocId": ""
+      },
+      "Headers": {}
+    },
     "FetchWaitSeconds": 10,
-    "PostPath": "/p/{id}",
-    "TagPath": "/explore/tags/{tag}"
+    "Paths": {
+      "Channel": "/{username}",
+      "GraphQL": "/graphql/query",
+      "Post": "/p/{id}",
+      "Tag": "/explore/tags/{tag}"
+    }
   },
   "Logging": {
     "LogLevel": {
