(Instagram): use authed fetch requests (#72)
* WIP

* WIP

* Add comment

---------

Co-authored-by: Kurt Hamilton <kurt@littlewheel.com>

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -54,12 +54,21 @@
     "WorkerCount": 1
   },
   "Instagram": {
-    "ChannelUrl": "https://www.instagram.com/{username}",
-    "FeedUrl": "https://www.instagram.com/api/v1/users/web_profile_info?username={username}",
-    "FetchUserAgent": "",
+    "BaseUrl": "https://www.instagram.com",
+    "Client": {
+      "Cookies": {},
+      "GraphQL": {
+        "PostsDocId": ""
+      },
+      "Headers": {}
+    },
     "FetchWaitSeconds": 10,
-    "PostUrl": "https://www.instagram.com/p/{id}",
-    "TagUrl": "https://www.instagram.com/explore/tags/{tag}"
+    "Paths": {
+      "Channel": "/{username}",
+      "GraphQL": "/graphql/query",
+      "Post": "/p/{id}",
+      "Tag": "/explore/tags/{tag}"
+    }
   },
   "Logging": {
     "LogLevel": {
