Do not return error if account creation fails due to double-submission; logging improvements

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -76,7 +76,8 @@
       "Hangfire": "None"
     },
     "NotFound": {
-      "IgnorePatterns": []
+      "IgnorePatterns": [],
+      "WarningUserAgents": []
     },
     "Path": ""
   },
