(error handling): find chapter if route 404; logging tweaks

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -76,6 +76,7 @@
       "Hangfire": "None"
     },
     "NotFound": {
+      "IgnorePaths": [],
       "IgnorePatterns": [],
       "WarningUserAgents": []
     },
