(logging): move ignore logic into LoggingService

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -71,13 +71,12 @@
     }
   },
   "Logging": {
+    "IgnorePaths": [],
+    "IgnorePatterns": [],
+    "IgnoreUserAgents": [],
     "LogLevel": {
       "Default": "Information",
       "Hangfire": "None"
-    },
-    "NotFound": {
-      "IgnorePaths": [],
-      "WarningUserAgents": []
     },
     "Path": ""
   },
