(events): use shortcodes in URLs

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -37,8 +37,8 @@
       }
     }
   },
-  "Errors": {
-    "Handle": true
+  "Events": {
+    "ShortcodeLength": 8
   },
   "Google": {
     "Geolocation": {
