--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -107,6 +107,7 @@
   },
   "Platforms": [],
   "RateLimiting": {
+    "BlockIpAddresses": [],
     "BlockPatterns": [],
     "BlockForSeconds": 0
   },
