add missing config

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -109,6 +109,7 @@
   "Platforms": [],
   "RateLimiting": {
     "BlockIpAddresses": [],
+    "BlockPaths": [],
     "BlockPatterns": [],
     "BlockForSeconds": 0
   },
